<resources>
    <string name="app_name">Wendy-Article</string>
    <string name="category">Kategori</string>
    <string name="title">Judul</string>
    <string name="date">Tanggal</string>
    <string name="rate">Rating</string>
    <string name="description">Deskripsi</string>
    <string name="profile">" "</string>
    <string name="myName">Wendy</string>
    <string name="myEmail">2415Wendy@gmail.com</string>
    <string name="w_article">W-Article</string>
    <string name="share">Share</string>
    <string name="home">home</string>
    <string-array name="data_category">
        <item>Education</item>
        <item>Sport</item>
        <item>Sport</item>
        <item>Health</item>
        <item>Health</item>
        <item>Sport</item>
        <item>Economy</item>
        <item>Sport</item>
        <item>Economy</item>
        <item>Health</item>
    </string-array>
    <string-array name="data_title">
        <item>Orangtua Wajib Tahu, Ini Perbedaan IQ, EQ, dan SQ yang Berpengaruh terhadap Perkembangan Remaja</item>
        <item>Bongkar Pasang Ganda Putra Leo/Bagas dan Daniel/Fikri </item>
        <item>AFC Champions League 2: Persib Tumbang 0-1 dari Port FC</item>
        <item>Fenomena Ketindihan saat Tidur, Sleep Paralysis atau Beneran Mistis?</item>
        <item>Temuan Praktik Nakal RS ke BPJS Kesehatan: Pasien Bodong sampai Overbilling</item>
        <item>China Open 2024: Fikri/Daniel Depak Unggulan Teratas, Lolos ke 8 Besar</item>
        <item>Pentingnya Dana Darurat untuk Menghadapi Keadaan Tak Terduga</item>
        <item>Ini Target Jules Kounde Bersama Barcelona di Liga Champions</item>
        <item>Tupperware Kini Menghadapi Gulung Tikar: Digilas dengan Wadah yang Lebih Murah</item>
        <item>6 Hal Sepele yang Bisa Menyebabkan Gula Darah Meroket, Termasuk Jarang Olahraga</item>
    </string-array>
    <string-array name="data_date">
        <item>12 Agustus 2024</item>
        <item>16 September 2024</item>
        <item>3 Agustus 2024</item>
        <item>21 Agustus 2024</item>
        <item>7 September 2024</item>
        <item>14 September 2024</item>
        <item>9 Agustus 2024</item>
        <item>19 Agustus 2024</item>
        <item>23 September 2024</item>
        <item>30 Agustus 2024</item>
    </string-array>
    <string-array name="data_photo">
        <item>https://asset.kompas.com/crops/idS9o-iSYgrWLbVPebp0MVv-etY=/0x0:1000x667/750x500/data/photo/2024/09/09/66dea1d6bcfef.jpg</item>
        <item>https://assets.kompasiana.com/items/album/2024/09/19/leobagas0001-66eb647aed64151e8f1603c5.jpg?t=o&amp;v=740&amp;x=416</item>
        <item>https://akcdn.detik.net.id/community/media/visual/2024/09/19/beckham-putra-asnawi-mangkualam_169.jpeg?w=700&amp;q=90</item>
        <item>https://akcdn.detik.net.id/community/media/visual/2017/10/12/32dda618-a2be-4728-9d79-85d8b0e111e9_169.jpg?w=700&amp;q=90</item>
        <item>https://akcdn.detik.net.id/community/media/visual/2018/03/09/9723c50f-a078-4d8b-9b9d-efc2ad29c407_169.jpeg?w=700&amp;q=90</item>
        <item>https://akcdn.detik.net.id/community/media/visual/2024/08/23/daniel-marthinmuhammad-shohibul-fikri-japan-open-2024-7_169.jpeg?w=700&amp;q=90</item>
        <item>https://assets.kompasiana.com/items/album/2024/09/19/woman-holding-jar-with-money-66ec146634777c47212fe0b2.jpg?t=o&amp;v=740&amp;x=416</item>
        <item>https://akcdn.detik.net.id/community/media/visual/2023/05/24/jules-kounde-barcelona-laliga-liga-spanyol_169.jpeg?w=700&amp;q=90</item>
        <item>https://assets-a3.kompasiana.com/items/album/2024/09/19/promo-tupperware-422956-600-100000-66ebdab0c925c459af278212.jpg?t=o&amp;v=410&amp;x=225</item>
        <item>https://akcdn.detik.net.id/community/media/visual/2022/09/20/ilustrasi-cek-gula-darah_169.jpeg?w=700&amp;q=90</item>
    </string-array>
    <string-array name="data_rate">
        <item>4.5/5</item>
        <item>4.3/5</item>
        <item>4.7/5</item>
        <item>3.9/5</item>
        <item>4.1/5</item>
        <item>4.6/5</item>
        <item>3.8/5</item>
        <item>4.2/5</item>
        <item>4.8/5</item>
        <item>4.4/5</item>
    </string-array>
</resources>